# heroes-of-the-brain

./: .gitignore  EEG_metrics_report.md  README.md  docker-compose.yml  plot_eeg.py
backend/: docker-compose.yml  dockerfile  pyproject.toml
backend/BrainAccessData/: 20251129_1851-raw.fif  20251129_1852-snapshot.csv  20251129_1853-raw.fif  20251129_1901-snapshot.csv  20251129_1903-raw.fif  20251129_2059-snapshot.csv  20251129_2100-raw.fif  20251129_2129-snapshot.csv  20251129_2130-raw.fif  20251129_2140-snapshot.csv  20251129_2141-raw.fif  20251129_2217-snapshot.csv  20251129_2221-snapshot.csv  20251129_2248-snapshot.csv  20251129_2256-snapshot.csv  20251129_2342-snapshot.csv  20251129_2349-snapshot.csv  20251129_2355-snapshot.csv  20251129_2359-snapshot.csv  20251130_0002-raw.fif  20251130_0002-snapshot.csv  20251130_0020-snapshot.csv  20251130_0128-snapshot.csv  20251130_0133-snapshot.csv  20251130_0149-snapshot.csv  20251130_0231-snapshot.csv  20251130_0255-snapshot.csv  20251130_0301-snapshot.csv  20251130_0308-snapshot.csv  20251130_0322-snapshot.csv  20251130_0329-snapshot.csv  20251130_0357-snapshot.csv  20251130_0408-snapshot.csv  20251130_0439-snapshot.csv  20251130_0455-snapshot.csv  20251130_0456-raw.fif  20251130_0456-snapshot.csv  20251130_1030-snapshot.csv  20251130_1045-snapshot.csv
backend/data/eeg_recordings/: eeg_data_20251129_153725.csv  mock_eeg_20251129_135732.csv  mock_eeg_20251129_140003.csv  mock_eeg_20251129_144448.csv
backend/src/: connector.py  eeg_config.py  eeg_headset.py  main.py  test_connector.py
backend/src/models/: __init__.py  (+6 more)
(+20 files in other folders)
