[project]
name = "hotb-backend"
version = "0.1.0"
description = "BCI Bridge & Server Application"
requires-python = ">=3.11"
readme = "README.md"

# Dependencies for Local Hardware Connector (runs on Host)
dependencies = [
    "brainaccess @ git+https://github.com/KN-Neuron/brainaccess-python-api.git",
    "numpy>=2.3.5",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.122.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]

# Dependencies for Docker Backend (Server only)
[project.optional-dependencies]
server = [
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "mne>=1.11.0",
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
